Hands-On/CloudFormation/cfn-temp.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This templates creates an ASG behind ALB.
  
Parameters:
  vpcFromTemplate:
    Description: Select your VPC
    Type: AWS::EC2::VPC::Id

  subnetListFromTemplate:
    Description: Select at least 2 subnets
    Type: List<AWS::EC2::Subnet::Id>
 
  keyPairFromTemplate:
    Description: Select your key
    Type: AWS::EC2::KeyPair::KeyName

  instanceTypeFromTemplate:
    Description: Select instance type
    Type: String
    Default: t2.micro
    AllowedValues:
     - t2.micro
     - t3.micro
     - t2.nano
     - t3.nano
  
Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-033b95fb8079dc481
    us-east-2:
      AMI: ami-0b614a5d911900a9b
    us-west-1:
      AMI: ami-0ed05376b59b90e46
    us-west-2:
      AMI: ami-0dc8f589abe99f538
    eu-west-1:
      AMI: ami-058b1b7fe545997ae
  
Resources:
  loadBalancerFromTemplate:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
        - !GetAtt secGroupFromTemplate.GroupId
      Subnets: !Ref subnetListFromTemplate
      Type: application

  listenerFromTemplate:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - Type: forward
          TargetGroupArn: !Ref targetGroupFromTemplate
      LoadBalancerArn: !Ref loadBalancerFromTemplate # Required
      Port: 80
      Protocol: HTTP

  autoScalingGrpFromTemplate:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs
      DesiredCapacity: "2"
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref launchTemplateFromTemplate
        Version: "1"
      MaxSize: "3" # Required
      MinSize: "1" # Required
      TargetGroupARNs:
        - !Ref targetGroupFromTemplate

  CPUPolicyFromTemplate:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref autoScalingGrpFromTemplate  # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0


  launchTemplateFromTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref AWS::Region
          - AMI
        InstanceType: !Ref instanceTypeFromTemplate
        KeyName: !Ref keyPairFromTemplate
        SecurityGroupIds:
          - !GetAtt secGroupFromTemplate.GroupId
        UserData: !Base64 |
          #! /bin/bash
          yum update -y
          yum install -y httpd
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
          DATE_TIME=`date`
          chmod -R 777 /var/www/html
          echo "<html>
          <head>
              <title> Congratulations! You have created an instance from Launch Template</title>
          </head>
          <body>
              <h1>This web server is launched from launch template by Isa Temelci</h1>
              <p>This instance is created at <b>$DATE_TIME</b></p>
              <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
              <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
          </body>
          </html>" > /var/www/html/index.html
          systemctl start httpd
          systemctl enable httpd


  targetGroupFromTemplate:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 3
      VpcId: !Ref vpcFromTemplate

  secGroupFromTemplate:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP for CFN # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref vpcFromTemplate

Outputs:
  AppURL:
    Description: This is URL for application load balancer
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt loadBalancerFromTemplate.DNSName
